# MCANIM-Project

./: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
Assets/: Anim_BodyBlow.fbx  Anim_Capoeira.fbx  Anim_Nervous.fbx  Anim_Samba.fbx  Anim_Skinning_Test.fbx  Anim_Thriller.fbx  Capoeira.fbx  DQBTest.fbx  Idle.fbx  Samba Dancing.fbx  SkinningTest.fbx  rig.shader  shader.shader  sky.shader
Assets/Shaders/: model.shader  plane.shader  rig.shader  sky.shader
Executable/: Run.bat  imgui.ini
Source/: .editorconfig  AnimationClip.cpp  AnimationClip.h  AnimationLoader.cpp  AnimationLoader.h  AnimationPlayer.cpp  AnimationPlayer.h  ArcBall.cpp  ArcBall.h  Bounds.cpp  Bounds.h  CMakeLists.txt  Camera.cpp  Camera.h  Channel.cpp  Channel.h  Character.h  DQS.cpp  DQS.h  DualQuat.cpp  DualQuat.h  DualQuaternionSkinning.cpp  DualQuaternionSkinning.h  FBXLoader.cpp  FBXLoader.h  InterfaceController.cpp  InterfaceController.h  Joint.cpp  Joint.h  KeyFrame.cpp  KeyFrame.h  LinearBlendSkinning.cpp  LinearBlendSkinning.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  ModelSelector.cpp  ModelSelector.h  Options.h  (+23 more)
